# hsc3-util

./: .gitlab-ci.yml  .gitmodules  Makefile  README  README.md  cabal.project  hsc3-util.cabal  hsc3-utils.cabal
.github/workflows/: ci.yml
Sound/SC3/Server/Buffer/: Send.hs
Sound/SC3/Server/Command/: DB.hs
cmd/: Makefile  grid.hs  hash-paren.hs  id-clear.hs  id-rewrite.hs  manta.hs  replay.hs  revent-kbd.hs  scsynth.hs  sensel-ll.c  sensel.c  setup.hs  uparam.hs
data/: cmd.text
hs/: Makefile  default-param.hs  hash-at.hs  hash-paren.hs  hsc3-setup.hs  id-rewrite.hs  psynth.hs  scsyndef-to-dot.hs  scsyndef-to-fs.hs  scsyndef-to-hs.hs  setup.hs  sexp.hs
md/: default-param.md  hash-paren.md  scsyndef-to-dot.md  scsyndef-to-fs.md  scsyndef-to-hs.md  sensel-ll.md  sensel.md  setup.md
