Name:              hsc3-utils
Version:           0.16
Synopsis:          Haskell SuperCollider Utilities
Description:       Haskell SuperCollider Utilities
License:           GPL
Category:          Sound
Copyright:         (c) Rohan Drape, 2013-2015
Author:            Rohan Drape
Maintainer:        rd@slavepianos.org
Stability:         Experimental
Homepage:          http://rd.slavepianos.org/t/hsc3-utils
Tested-With:       GHC == 7.10.1
Build-Type:        Simple
Cabal-Version:     >= 1.8

Data-files:        README

executable hsc3-hash-at
  build-depends:   base == 4.*,
                   hsc3-rw == 0.16.*
  hs-source-dirs:  cmd
  main-is:         hash-at.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-hash-paren
  build-depends:   base == 4.*,
                   hsc3-rw == 0.16.*
  hs-source-dirs:  cmd
  main-is:         hash-paren.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-id-rewrite
  build-depends:   base == 4.*,
                   hsc3-rw == 0.16.*
  hs-source-dirs:  cmd
  main-is:         id-rewrite.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-id-clear
  build-depends:   base == 4.*,
                   hsc3-rw == 0.16.*
  hs-source-dirs:  cmd
  main-is:         id-clear.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-scsyndef-to-dot
  build-depends:   base == 4.*,
                   filepath,
                   hsc3-dot == 0.16.*,
                   hsc3 == 0.16.*,
                   process
  hs-source-dirs:  cmd
  main-is:         scsyndef-to-dot.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-scsyndef-to-hs
  build-depends:   base == 4.*,
                   filepath,
                   hsc3 == 0.16.*
  hs-source-dirs:  cmd
  main-is:         scsyndef-to-hs.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-setup
  build-depends:   directory,
                   base == 4.*,
                   filepath,
                   hsc3-rw == 0.16.*,
                   process
  hs-source-dirs:  cmd
  main-is:         setup.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-sexp
  build-depends:   base == 4.*,
                   hsc3-rw == 0.16.*
  hs-source-dirs:  cmd
  main-is:         sexp.hs
  ghc-options:     -Wall -fwarn-tabs

executable hsc3-default-param
  build-depends:   base == 4.*,
                   hsc3-db == 0.16.*
  hs-source-dirs:  cmd
  main-is:         default-param.hs
  ghc-options:     -Wall -fwarn-tabs

Source-Repository  head
  Type:            darcs
  Location:        http://rd.slavepianos.org/sw/hsc3-utils/
